move static methods from TaskClasses to Tooling class